--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "require": {
         "php": ">=5.6",
-        "kirki-framework/control-base": "dev-master"
+        "kirki-framework/control-base": "dev-master",
+        "kirki-framework/url-getter": "dev-master"
     },
     "autoload": {
 		"psr-4": {
