--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=5.6",
         "kirki-framework/control-base": "dev-master",
-        "kirki-framework/url-getter": "dev-master"
+        "kirki-framework/url-getter": "*"
     },
     "autoload": {
 		"psr-4": {
