--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.6",
-        "kirki-framework/control-base": "dev-master",
+        "kirki-framework/control-base": "*",
         "kirki-framework/url-getter": "*"
     },
     "autoload": {
