--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     ],
     "require": {
         "php": ">=5.6",
-        "kirki-framework/control-base": "^1.0.1",
-        "kirki-framework/url-getter": "^1.0.2"
+        "kirki-framework/control-base": "*",
+        "kirki-framework/url-getter": "*"
     },
     "autoload": {
 		"psr-4": {
