--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require": {
         "php": ">=5.6",
         "kirki-framework/control-base": "*",
+        "kirki-framework/field": "*",
         "kirki-framework/url-getter": "*"
     },
     "autoload": {
