--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": ">=5.6",
         "kirki-framework/control-base": "dev-master",
         "kirki-framework/field": "dev-master",
-        "kirki-framework/url-getter": "dev-master"
+        "kirki-framework/url-getter": "*"
     },
     "autoload": {
 		"psr-4": {
