--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,8 @@
     ],
     "require": {
         "php": ">=5.6",
-        "kirki-framework/control-base": "dev-master",
-        "kirki-framework/field": "dev-master",
-        "kirki-framework/url-getter": "*"
+        "wptrt/control-color-alpha": "*",
+        "kirki-framework/field": "dev-master"
     },
     "autoload": {
 		"psr-4": {
